# frrsd

./: COPYING  README.md  pyproject.toml
frrsd/: __init__.py  __main__.py
frrsdplot/: __init__.py  __main__.py
openrc/: frrsdd
sql/: tbl-bgp-peers.psql  tbl-bgp-unicast.psql  tbl-ping.psql  types.psql
